--- a/css/main.css
+++ b/css/main.css
@@ -529,6 +529,35 @@ body {
     padding: 0;
 }
 
+.card_filter_block {
+    display: flex;
+
+}
+
+.filter_block {
+    margin-left: 304px;
+}
+
+.filter {
+    margin-left: 16px;
+}
+
+.fiter_block_item {
+    text-transform: uppercase;
+    font-size: 14px;
+    line-height: 17px;
+    color: #6F6E6E;
+}
+
+.fiter_block_item::after {
+    content: url(../img/icon/down.svg);
+    margin-left: 10px;
+}
+
+.filter_block_btn {
+    margin-right: 30px;
+}
+
 .card_page_filter {
     margin: 50px 0 64px 0;
 }
