--- a/css/main.css
+++ b/css/main.css
@@ -567,3 +567,154 @@ body {
     content: url(../img/icon/filter.svg);
     margin-left: 11px;
 }
+.product_slider {
+    background: #F7F7F7;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.slider_btn {
+    display: block;
+    width: 47px;
+    height: 47px;
+    background: #ccc;
+    position: relative;
+}
+.slider_btn::after {
+    display: block;
+    content: '';
+    background-color: #000;
+    width: 5px;
+    height: 15px;
+    position: absolute;
+    transform: rotate(45deg);
+    top: 12px;
+    left: 19px;
+}
+.slider_btn::before {
+    display: block;
+    content: '';
+    background-color: #000;
+    width: 5px;
+    height: 15px;
+    position: absolute;
+    transform: rotate(-45deg);
+    top: 19px;
+    left: 19px;
+}
+.slider_btn:nth-child(3) {
+    transform: rotate(180deg);
+}
+.slider_btn_active::before {
+    display: block;
+    content: '';
+    background-color: #F16D7F;
+    width: 5px;
+    height: 15px;
+    position: absolute;
+    transform: rotate(-45deg);
+    top: 19px;
+    left: 19px;
+}
+.slider_btn_active::after {
+    display: block;
+    content: '';
+    background-color: #F16D7F;
+    width: 5px;
+    height: 15px;
+    position: absolute;
+    transform: rotate(45deg);
+    top: 12px;
+    left: 19px;
+}
+.product_annatation_info {
+    border: 1px solid #EAEAEA;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(-65px);
+    background-color: #fff;
+} 
+.product_annatation_info_line {
+    border: 0.5px solid #EAEAEA;
+    width: 45%;
+}
+.product_offer {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.product_offer_title {
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    color: #F16D7F;
+    margin-top: 64px;
+    margin-bottom: 27px;
+    position: relative;
+    text-transform: uppercase;
+}
+.product_offer_title::before {
+    content: '';
+    height: 3px;
+    width: 63px;
+    background-color: #EF5B70;
+    position: absolute;
+    top: 30px;
+    left: 30%;
+}
+.product_offer_name {
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 22px;
+    color: #4D4D4D;
+    margin-bottom: 48px;
+}
+.product_offer_info {
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    color: #5E5E5E;
+    width: 555px;
+    margin-bottom: 32px;
+}
+.product_offer_price {
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 29px;
+    color: #EF5B70;
+    margin-bottom: 64px;
+}
+.product_offer_filter {
+    margin-top: 64px;
+    margin-bottom: 48px;
+}
+.product_offer_btns {
+    display: flex;
+    flex-direction: column;
+}
+.product_add_to_catd {
+    align-self: center;
+    margin-bottom: 64px;
+    border: 1px solid #FF6A6A;
+    color: #FF6A6A;
+    padding: 14px 57px;
+    display: flex;
+    align-items: center;
+}
+.product_add_to_catd::before {
+    margin-right: 23px;
+    content: url(../img/icon/add-to-cart.svg);
+}
+.product_card_items {
+    margin-top: 50px;
+    margin-bottom: 128px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
