--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,8 @@ input {
     border: none;
     background: transparent;
     cursor: pointer;
+    font-family: 'Lato',
+        sans-serif;
 }
 
 body {
@@ -52,12 +54,25 @@ body {
 
 .search_input {
     position: absolute;
-    padding: 10px 15px;
+    width: 0;
+    min-height: 0;
+    padding: 10px 15px 10px 15px;
     border-radius: 10px;
-    display: none;
+    left: 40px;
+    outline: none;
+    color: #fff;
+}
+
+.search_input:focus {
+    width: 200px;
+    min-height: 20px;
+    transition: width 0.5s ease;
+    border: 1px solid #fff;
 }
 
 .search_btn {
+    cursor: pointer;
+    display: block;
     position: absolute;
     background-image: url(../img/icon/search.svg);
     background-repeat: no-repeat;
@@ -67,12 +82,168 @@ body {
 
 }
 
+.nav-right {
+    display: flex;
+}
+
 .nav-right a {
     margin-right: 33px;
 }
 
 .menu_btn {
-    margin-right: 33px;
+    cursor: pointer;
+    margin-right: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 32px;
+    height: 32px;
+}
+
+
+.menu_btn span {
+    display: block;
+    width: 100%;
+    height: 3px;
+    background-color: #fff;
+    position: relative;
+}
+
+.menu_btn span::before,
+.menu_btn span::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 3px;
+    background-color: #fff;
+    position: absolute;
+    top: -10px;
+    left: 0;
+}
+
+.menu_btn span::after {
+    top: 10px;
+}
+
+#menu_switch {
+    display: none;
+}
+
+#menu_switch:checked~.menu_list {
+    display: block;
+}
+
+.menu_list {
+    display: none;
+    width: 232px;
+    min-height: 764px;
+    padding: 16px 33px;
+    box-sizing: border-box;
+    background-color: #fff;
+    box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+    list-style: none;
+    position: absolute;
+    top: 80px;
+    right: 0;
+    z-index: 20;
+}
+
+.menu_list_close_btn {
+    display: block;
+    width: 12px;
+    height: 12px;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    top: 0;
+    left: 170px;
+}
+
+.menu_list_close_btn::before,
+.menu_list_close_btn::after {
+    content: "";
+    display: block;
+    width: 18px;
+    height: 2px;
+    background: #6F6E6E;
+    border-radius: 10px;
+    position: absolute;
+    top: 5px;
+    left: -3px;
+    transform: rotate(45deg);
+}
+
+.menu_list_close_btn::after {
+    transform: rotate(-45deg)
+}
+
+.menu_list_close_btn:hover::before,
+.menu_list_close_btn:hover::after {
+    background: #B7B6B6;
+}
+
+.menu_list_close_btn:active::before,
+.menu_list_close_btn:active::after {
+    background: #535353;
+}
+
+.menu_list_title {
+    display: block;
+    margin: 9px 0 24px 0;
+    font-weight: bold;
+    color: #000000;
+    text-transform: uppercase;
+}
+
+.menu_title>a,
+.menu_list_item>a,
+.menu_sublist_item>a {
+    font-style: normal;
+    font-size: 14px;
+    line-height: 17px;
+    font-weight: normal;
+}
+
+.menu_list_item>a {
+    display: block;
+    margin: 0 0 11px 0;
+    color: #F16D7F;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+.menu_list_item:hover>a {
+    color: #9889D7;
+}
+
+.menu_list_item:active>a {
+    color: #9D2334;
+}
+
+.menu_sublist {
+    padding: 0 0 0 21.5px;
+    box-sizing: border-box;
+    list-style: none;
+}
+
+.menu_sublist_item>a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    margin: 0 0 11px 0;
+    color: #6F6E6E;
+}
+
+.menu_sublist_item a {
+    text-decoration: none;
+}
+
+.menu_sublist_item:hover a {
+    text-decoration: underline;
+}
+
+.menu_sublist_item:active a {
+    text-decoration: none;
 }
 
 .nav-right a:last-child {
@@ -233,16 +404,36 @@ body {
 .product_card_item {
     background: #F8F8F8;
     margin-top: 30px;
+    position: relative;
+}
+
+.add_to_cart_btn {
+    position: absolute;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    top: 188px;
+    left: 32.7%;
 }
 
 .add_to_cart {
+    display: flex;
+    align-items: center;
     margin: 0 auto;
     border: 1px solid #FFFFFF;
     font-size: 14px;
     line-height: 17px;
     color: #FFFFFF;
-    display: none;
-    position: relative;
+    padding: 11px 16px 8px 13px;
+}
+
+.add_to_cart::before {
+    content: url(../img/icon/add-to-cart-white.svg);
+    margin-right: 11px;
+}
+
+.product_card_item:hover .add_to_cart_btn {
+    display: flex;
 }
 
 .product_card_item:hover img {
@@ -387,7 +578,7 @@ body {
     display: flex;
     align-items: center;
     color: #222224;
-    opacity: 0.67;
+    background-color: #E1E1E1;
     padding: 16px 20px;
     border: none;
     border-radius: 30px 0 0 30px;
@@ -535,11 +726,17 @@ body {
 }
 
 .filter_block {
-    margin-left: 304px;
+    margin-left: 320px;
+    display: flex;
+    align-items: center;
 }
 
-.filter {
+.filter_btn {
     margin-left: 16px;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 17px;
+    color: #000000;
 }
 
 .fiter_block_item {
@@ -554,7 +751,46 @@ body {
     margin-left: 10px;
 }
 
+.size_block_btn {
+    cursor: pointer;
+    display: block;
+    font-size: 14px;
+    line-height: 17px;
+    color: #6F6E6E;
+    text-transform: uppercase;
+    position: relative;
+    margin-right: 30px;
+}
+
+#switch_size {
+    display: none;
+}
+
+#switch_size:checked~.list_size {
+    display: flex;
+}
+
+.list_size {
+    z-index: 20;
+    position: absolute;
+    display: none;
+    flex-direction: column;
+    margin: 5px 0 0 0;
+    padding: 7px 30px 11px 9px;
+    background: #FFFFFF;
+    box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+}
+
+.list_size_item_title {
+    text-transform: uppercase;
+    font-size: 14px;
+    line-height: 16px;
+    color: #6F6E6E;
+    margin-left: 9px;
+}
+
 .filter_block_btn {
+    cursor: pointer;
     margin-right: 30px;
 }
 
@@ -562,10 +798,100 @@ body {
     margin: 50px 0 64px 0;
 }
 
+.filter_btn {
+    cursor: pointer;
+    position: relative;
+}
+
+
+
+#switch_filter:checked~.filter {
+    background: #FFFFFF;
+    box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+}
 
 .filter_item::after {
     content: url(../img/icon/filter.svg);
     margin-left: 11px;
+}
+
+
+.filter_list {
+    z-index: 20;
+    display: none;
+    list-style: none;
+    position: absolute;
+    margin-top: 24px;
+    background: #FFFFFF;
+    width: 360px;
+    padding: 30px;
+}
+
+.filter_list_item {
+    list-style: none;
+}
+
+
+.filter_list_item {
+    position: relative;
+    text-transform: uppercase;
+    font-size: 14px;
+    line-height: 17px;
+    color: #EF5B70;
+    border-bottom: 1px solid #EBEBEB;
+    padding: 12px 0 11px 15px;
+}
+
+.filter_list_item::before {
+    content: "";
+
+    width: 5px;
+    height: 37px;
+    background-color: #EF5B70;
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+}
+
+.filter_list_item:nth-child(3) {
+    margin-bottom: 18px;
+}
+
+.filter_list_link {
+    text-decoration: none;
+    color: #EF5B70;
+}
+
+#switch_filter {
+    display: none;
+}
+
+#switch_filter:checked~.filter_list {
+    display: block;
+}
+
+.category_list {
+    margin-left: 34px;
+}
+
+.category_list_item {
+    list-style: none;
+    margin-bottom: 11px;
+}
+
+.category_list_item:first-child {
+    margin-top: 24px;
+}
+
+.category_list_item:last-child {
+    margin-bottom: 24px;
+}
+
+.category_list_link {
+    text-decoration: none;
+    font-size: 14px;
+    line-height: 17px;
+    color: #6F6E6E;
 }
 
 .product_slider {
@@ -1063,6 +1389,10 @@ body {
     line-height: 29px;
     color: #000000;
     margin-bottom: 21px;
+}
+
+.registration_info_list {
+    list-style: none;
 }
 
 .reg_info_item {
